# YOGURT

./: .gitignore  LICENSE  README.md
Data/2020-06-08/: dataJP.csv  dataJP2_empirical.csv  dataJP_empirical.csv  dataWrenchJ_K.csv  dataWrenchJ_O.csv
Data/2020-06-11/: trajJP_empirical.csv
Desktop/: Desktop.rar
Desktop/Panda_c++/: get_pose_joint  get_pose_joint.cpp  group_homing  group_homing.cpp  joint_move_point  joint_move_point.cpp
FleshWaxberry/: CMakeLists.txt
FleshWaxberry/LACTIC/: CMakeLists.txt  LACTIC.h  readCSV.cpp
ICEYOGURT/: README.md  UNCORK_ICEYOGURT.m
ICEYOGURT/DECANTER/Kombucha/: UNCORK_Kombucha.m
ICEYOGURT/DECANTER/Kombucha/Data/2020-06-08/: data0608.mat
ICEYOGURT/DECANTER/Kombucha/Data/2020-06-11/: dataJP.csv
ICEYOGURT/WINE/: SO3P2SE3.m  cell2matrix.m  computeQuiver3.m  curtialTial.m  flattenSE3.m  fold2SE3.m  iceDTW.m  plotHMM2SC.m
ICEYOGURT/WINEGLASS/@PandaOne/: PandaOne.m  checkJP.m  checkJV.m  interpJP.m
ICEYOGURT/WINEGLASS/@PandaSim/: PandaSim.m
ICEYOGURT/WINEGLASS/@PandaZero/: PandaZero.m  demo2SE3.m  plot3PandaCartesian.m  plotPandaJoint.m
ICEYOGURT/WINEGLASS/ALCOHOL/: README.md  trapezoidalPositionPlan.asv  trapezoidalPositionPlan.m
RawMilkYogurt/: CMakeCache.txt  CMakeLists.txt  Makefile  Tutorial  cmake_install.cmake  generateJointPosition.cpp  helloWorld
RawMilkYogurt/MathFunctions/: Makefile  cmake_install.cmake
libfranka/: CMakeLists.txt
libfranka/kambucha/: CMakeLists.txt  kambuchaCarteOEPose.cpp  kambuchaCarteOEPoseTorque.cpp  kambuchaCarteOPose.cpp  kambuchaCarteOPoseTorque.cpp  kambuchaJointPose.cpp  kambuchaJointPoseRT.cpp  kambuchaJointPose_Oneshot.cpp  kambuchaReadOnce.cpp  kambuchaReadRT.cpp  kambuchaZeroGravity.cpp
libfranka/yogurt/: CMakeCache.txt  CMakeLists.txt  yogurtCartesianImpedanceControl.cpp  yogurtCartesianPose.cpp  yogurtGetEFT.cpp  yogurtGetJP_rt.cpp  yogurtGetTauJ_rt.cpp  yogurtGetWrench_rt.cpp  yogurtJointMotion.cpp  yogurtJointPosition_csv.cpp  yogurtJointVelocity.cpp  yogurtReadOnce.cpp  yogurtTemplate.cpp  yogurtTestTemplate.cpp
